fix(wasm): bundle complete Forge runtime assets